# medicaid-fraud-detector

./: .gitignore  METHODOLOGY.md  README.md  download_parquet.py  fraud_signals.json  fraud_signals_sample.json  pyproject.toml  requirements.txt  run.sh  setup.sh
src/: __init__.py  ingest.py  main.py  output.py  signals.py
tests/: test_ingest.py  test_integration.py  test_output.py  test_signals.py
tests/fixtures/: __init__.py
